@@ -200,12 +200,12 @@
 					<node name="summary" value="Nastavení zobrazení textu"/>
 				</node>
 			</node>
-			<node name="Scrolling" value="Posunování">
-				<node name="flick" value="Posunování tahem">
-					<node name="summaryOn" value="Posunovat stránky tahem prstem"/>
-					<node name="summaryOff" value="Posunovat stránky klepnutím prstem"/>
+			<node name="Scrolling" value="Posouvání">
+				<node name="flick" value="Posouvání tahem">
+					<node name="summaryOn" value="Posouvat stránky tahem prstem"/>
+					<node name="summaryOff" value="Posouvat stránky klepnutím prstem"/>
 				</node>
-				<node name="volumeKeys" value="Posunování tlačítky ovládání hlasitosti">
+				<node name="volumeKeys" value="Posouvání tlačítky ovládání hlasitosti">
 					<node name="summaryOn" value="Použít tlačítka ovládání hlasitosti pro posun"/>
 					<node name="summaryOff" value="Ponechat tlačítka ovládání hlasitosti pro zvuk"/>
 				</node>
@@ -213,9 +213,9 @@
 					<node name="summaryOn" value="Posunovat stránky hladčeji"/>
 					<node name="summaryOff" value="Posunovat stránky rychleji"/>
 				</node>
-				<node name="horizontal" value="Vodorovné posunování">
-					<node name="summaryOn" value="Posunovat stránky vodorovně"/>
-					<node name="summaryOff" value="Posunovat stránky svisle"/>
+				<node name="horizontal" value="Vodorovné posouvání">
+					<node name="summaryOn" value="Posouvat stránky vodorovně"/>
+					<node name="summaryOff" value="Posouvat stránky svisle"/>
 				</node>
 			</node>
 		</node>
