@@ -1,5 +1,6 @@
 ===== 0.7.14 (??? ??, 2010) =====
 * Ukrainian hyphenations have been fixed
+* Czech resources have been updated
 
 ===== 0.7.13 (Oct 28, 2010) =====
 * Keys backlight is now disabled during reading
